corpus/c/syntax/case-10/snapshots/gcc15/dual_sink_structured/render.ci.txt
note: some compiler details were not fully structured; original diagnostics are preserved
src/main.c:2:26: error: [syntax] expected '}}' before ';' token
want: }}
near: ; token
| src/main.c:2:26
|     int values[2] = {1, 2;
|                          ^

src/main.c:4:1: error: [syntax] expected ',' or ';' at end of input
want: ,
near: end of input
| src/main.c:4:1
| }
| ^

src/main.c:4:1: error: [syntax] expected declaration or statement at end of input
want: declaration or statement
near: end of input
| src/main.c:4:1
| }
| ^

src/main.c:2:26: error: [syntax] expected '}' before ';' token
src/main.c: In function 'main':
    2 |     int values[2] = {1, 2;
      |                     ~    ^
want: }
near: ; token
| src/main.c:2:26
|     int values[2] = {1, 2;
|                          ^